<resources>
    <string name="app_name">Milkiyat</string>
    <string name="GSI">Sign In With Google</string>
    <string name="Srch">Search here...</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDlpx0s2DO3hFjp6jO1IvOUNAE9YOWpMZE</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_ad">Upload AD</string>
    <string name="upload_images">Upload Images</string>
    <string name="enter_location">Enter location</string>
    <string name="type_location_here">Type Location Here</string>
    <string name="next"><![CDATA[Next ->]]></string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_full_description_of_house">Enter Full Description of House</string>
    <string name="enter_price">Enter Price</string>
    <string name="enter_full_description_of_land">Enter Full Description of Land</string>
    <string name="click_upload_images">Click To Upload Images</string>
    <string name="long_click_on_image_to_remove">Long Click on Image To Remove</string>
    <string name="post">Post</string>
</resources>