<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/messages"
            android:icon="@drawable/ic_message"
            android:title="@string/messages" />
        <item
            android:title=""/>
        <item
            android:id="@+id/notifications"
            android:icon="@drawable/ic_notifications"
            android:title="@string/notifications" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_person"
            android:title="@string/profile" />
    </group>

</menu>