<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddPhotosFragment"
    android:background="@color/creamGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/btnAddImages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/outline_box"
            android:backgroundTint="@color/seaGreen"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:src="@drawable/add_photos" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:maxLines="1"
                android:text="@string/click_upload_images"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvImageDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/long_click_on_image_to_remove"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@+id/btnAddImages" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUploadImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvImageDelete" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="@color/seaGreen"
            android:text="@string/next"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>