<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frameLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_location"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="140dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/llLocation"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/outline_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocation"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_weight="0.1"
                android:src="@drawable/add_location"
                android:layout_marginStart="2dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:text="Click to Fetch Location Automatically"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="4dp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/type_location_here"
            android:theme="@style/ThemeOverlay.Material3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llLocation"
            app:boxBackgroundMode="none"
            android:background="@drawable/outline_box">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/locationText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="16sp"
                android:padding="4dp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginTop="10dp"
            android:text="@string/next"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:backgroundTint="@color/seaGreen"
            android:shadowColor="@color/black"/>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>